2015-11-23  Kugan Vivekanandarajah  <kuganv@linaro.org>

	PR target/68390
	* gcc/testsuite/gcc.c-torture/execute/pr68390.c: New test.

2015-11-22  Jerry DeLisle  <jvdelisle@gcc.gnu.org>

	* gfortran.dg/fmt_g0_1.f08: Update test. Leading zero.

2015-11-22  Steven G. Kargl  <kargl@gcc.gnu.org>

	PR fortran/68486
	* gfortran.dg/simplify_cshift_2.f90: New test.

2015-11-22  James Norris  <jnorris@codesourcery.com>
	    Cesar Philippidis  <cesar@codesourcery.com>

	* gfortran.dg/goacc/declare-1.f95: Update test.
	* gfortran.dg/goacc/declare-2.f95: New test.

2015-11-22  Bilyan Borisov  <bilyan.borisov@arm.com>

	* gcc.target/aarch64/simd/vmulx_lane_f32_1.c: New.
	* gcc.target/aarch64/simd/vmulx_lane_f64_1.c: New.
	* gcc.target/aarch64/simd/vmulx_laneq_f32_1.c: New.
	* gcc.target/aarch64/simd/vmulx_laneq_f64_1.c: New.
	* gcc.target/aarch64/simd/vmulxq_lane_f32_1.c: New.
	* gcc.target/aarch64/simd/vmulxq_lane_f64_1.c: New.
	* gcc.target/aarch64/simd/vmulxq_laneq_f32_1.c: New.
	* gcc.target/aarch64/simd/vmulxq_laneq_f64_1.c: New.
	* gcc.target/aarch64/simd/vmulxs_lane_f32_1.c: New.
	* gcc.target/aarch64/simd/vmulxs_laneq_f32_1.c: New.
	* gcc.target/aarch64/simd/vmulxd_lane_f64_1.c: New.
	* gcc.target/aarch64/simd/vmulxd_laneq_f64_1.c: New.

2015-11-21  Steven G. Kargl  <kargl@gcc.gnu.org>

	* gfortran.dg/simplify_cshift_1.f90: New test.

2015-11-21  Nathan Sidwell  <nathan@acm.org>

	* gcc.dg/atomic-generic.c: Include <string.h>.

2015-11-21  David Edelsohn  <dje.gcc@gmail.com>

	* gfortran.dg/submodule_6.f08: Add dg-require-effective-target lto.

2015-11-21  Uros Bizjak  <ubizjak@gmail.com>

	* g++.dg/init/vbase1.C: Also run on i?86-*-*.

2015-11-21  Jakub Jelinek  <jakub@redhat.com>

	PR debug/66432
	* gcc.dg/debug/pr66432.c: New test.

2015-11-20  Ian Lance Taylor  <iant@google.com>

	PR go/66406
	* go.test/go-test.exp (go-gc-tests): Skip nilptr.go if PIE.

2015-11-20  Mike Stump  <mikestump@comcast.net>

	* g++.dg/init/vbase1.C: Only run on x86_64-*-* as this testcase